--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - static/images/home_profile_contract.png
     - static/images/home_profile_wallet.png
     - static/images/home_profile_house.png
+    - static/images/loading.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
